# WorldDocCode

./: README.md
client/: Cargo.toml
client/src/: main.rs
old/client/: tempfile.txt
old/protocol/: Cargo.toml
old/protocol/src/: lib.rs
old/server/: Cargo.toml
pallasite/: Cargo.toml  README.md
pallasite/src/: document.rs  identity.rs  lib.rs
server/src/: main.rs
